--- a/styles/globals.css
+++ b/styles/globals.css
@@ -3,16 +3,22 @@
 @tailwind utilities;
 
 /* @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@100;200;300;400;500;600;700;800;900&display=swap'); */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
 
 html {
   scroll-behavior: smooth;
   font-family: 'Raleway', sans-serif;
 }
 
+h1{
+  font-family: 'Roboto', sans-serif;
+}
+
 
 @layer base {
   body {
-    @apply bg-[#3D403A] text-[#0D0D0D] tracking-wide
+    @apply bg-[#F2EFEB] text-[#0D0D0D] tracking-wide
   }
 
   h1, h2, h3, h4, h5, h6 {
@@ -20,7 +26,7 @@ html {
   }
 
   h1 {
-    @apply text-4xl sm:text-5xl md:text-6xl font-[Raleway]
+    @apply text-4xl sm:text-5xl md:text-6xl font-[roboto]
   }
 
   h2 {
